# yaoyorozu

./: Cargo.toml  LICENSE  desktop.ini  test0.8g
memo/: app.txt  memo-rust.txt
screenshots/: desktop.ini
screenshots/新しいフォルダー/: desktop.ini
src/: Cargo.toml  app.rs  main.rs  mod.rs  ui_theme.rs
src/appdoc/: orichy_timer.rs
src/engine/: ast.8g  ast.rs  evaluator .8g  evaluator.rs  lexer.8g  lexer.rs  mod.rs  parser.8g  parser.rs  runner.8g  runner.rs
src/ui/: mod.rs  sidebar.rs  syntax.rs
test/: test.txt  新規の書物.fuda
y-site-ed/content/: test.md
y-site-ed/public/: search_index.en.js  sitemap.xml
