[package]
name = "yaoyorozu"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.28.1"
egui = "0.28.1"
egui_extras = { version = "0.28.1", features = ["all_loaders", "gif"] }
image = { version = "0.25", features = ["default", "gif"] }
serde = { version = "1", features = ["derive"] }
rfd = "0.14"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
